--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <head>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.7.0/lib/p5.js"></script>
     <script src="sketch.js"></script>
+    <title>Running and Jumping</title>
   </head>
   <body>
     <main></main>
